@@ -1,11 +1,13 @@
 package com.spring.websellspringmvc.controller.web;
 
+import com.spring.websellspringmvc.dto.response.KeyResponse;
 import com.spring.websellspringmvc.dto.response.UserInfoResponse;
 import com.spring.websellspringmvc.models.Key;
 import com.spring.websellspringmvc.models.User;
 import com.spring.websellspringmvc.services.key.KeyServices;
 import com.spring.websellspringmvc.services.user.UserServices;
 import com.spring.websellspringmvc.session.SessionManager;
+import com.spring.websellspringmvc.utils.constraint.OrderStatus;
 import com.spring.websellspringmvc.utils.constraint.PageAddress;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
@@ -46,24 +48,20 @@ public class UserController {
 
     @GetMapping("/order")
     public ModelAndView getOrderPage() {
-        return new ModelAndView(PageAddress.USER_ORDER.getPage());
+        ModelAndView mov = new ModelAndView(PageAddress.USER_ORDER.getPage());
+        return mov;
     }
 
     @GetMapping("/key")
     public ModelAndView getKeyPage() {
         User user = sessionManager.getUser();
-        List<Key> keys = keyServices.getKeys(user.getId());
-        boolean hasKey;
-        if(keys.isEmpty()) {
-            hasKey = true;
-        }else{
-            hasKey = false;
-        }
-        System.out.println("Kiem tra hasKey: "+hasKey);
+        List<KeyResponse> keys = keyServices.getKeys(user.getId());
+        boolean hasKey = !keys.isEmpty() ;
         ModelAndView mov = new ModelAndView();
         mov.setViewName(PageAddress.USER_KEY.getPage());
         mov.addObject("hasKey", hasKey);
-        mov.addObject("currentKey", keys.get(0));
+        mov.addObject("currentKey", !keys.isEmpty() ? keys.getFirst() : new KeyResponse());
+        System.out.println("currentKey: " + keys.getFirst().getCreateAt());
         return mov;
     }
 }
